--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Test
-        run:
+        run: |-
           docker login -u ${{ secrets.DOCKER_USERNAME }} - p ${{ secrets.DOCKER_PASSWORD }}
           docker build -t raghavendra31789/react-rest -f ./client/Dockerfile.dev ./client
           docker build -e CI=true raghavendra31789/react-test npm test
