--- a/k8s/client-deployment.yml
+++ b/k8s/client-deployment.yml
@@ -15,6 +15,6 @@ spec:
       containers:
         - name: client
           # image: stephengrider/multi-client
-          iamge: raghavendra31789/multi-client
+          image: raghavendra31789/multi-client
           ports:
             - containerPort: 3000
